add gsap & create basic home layout

--- a/index.html
+++ b/index.html
@@ -11,9 +11,36 @@
 </head>
 
 <body>
-  <div id="app"></div>
-  <h1 class="text-red-500">Hello world</h1>
-  <script type="module" src="/src/main.js"></script>
+
+  <!-- header - navbar  -->
+  <nav class="p-6 px-[150px] flex justify-between items-center w-full border-b-[1.5px] border-gray-400">
+    <a href="#">
+      <div class="flex items-center justify-start w-1/2 gap-2 header-logo scale-[0.8]">
+        <img src="./src/assets/images/logo.png" alt="Logo" />
+        <span class="text-3xl">Sachin</span>
+      </div>
+    </a>
+    <ul class="flex gap-8 items-center justify-end w-1/2">
+      <li class="header-link"><a href="/">Home</a></li>
+      <li class="header-link"><a href="/about">About</a></li>
+      <li class="header-link"><a href="/contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- landing page  -->
+  <section class="w-full h-full flex justify-center items-center">
+    <div class="w-1/2 text-gray-600 flex justify-center items-center">
+      <span>Namaste, I'm <h1 class="text-6xl text-gray-500">Sachin Singh</h1></span>
+    </div>
+    <div class="w-1/2 relative">
+      <img src="./src/assets/images/home developer illustration.png" alt="home page developer illustration"
+        class="z-[10]">
+      <img src="./src/assets/images/dots.svg" alt="dots" class="absolute top-[-200px] right-[-200px] z-[9] scale-[0.2]">
+    </div>
+
+  </section>
+
+  <script type="module" defer src="/src/main.js"></script>
 </body>
 
 </html>
