--- a/index.html
+++ b/index.html
@@ -7,40 +7,255 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.2/dist/tailwind.min.css">
   <link rel="stylesheet" href="./src/style.css">
-  <title>Vite App</title>
+  <title>Sachin Portfolio</title>
 </head>
 
-<body>
+<body class="scroll-smooth">
 
   <!-- header - navbar  -->
   <nav class="p-6 px-[150px] flex justify-between items-center w-full border-b-[1.5px] border-gray-400">
     <a href="#">
-      <div class="flex items-center justify-start w-1/2 gap-2 header-logo scale-[0.8]">
-        <img src="./src/assets/images/logo.png" alt="Logo" />
+      <div class="flex items-center justify-start w-1/2 gap-2 header-logo">
+        <!-- <img src="./src/assets/images/logo.png" alt="Logo" /> -->
+        <img src="./src/assets/images/icons8-coffee.gif" class="scale-[1.4]" alt="Logo" />
         <span class="text-3xl">Sachin</span>
       </div>
     </a>
-    <ul class="flex gap-8 items-center justify-end w-1/2">
-      <li class="header-link"><a href="/">Home</a></li>
-      <li class="header-link"><a href="/about">About</a></li>
-      <li class="header-link"><a href="/contact">Contact</a></li>
+    <ul class="flex gap-8 items-center justify-end w-1/2 hover:[&>li]:font-bold transition-all duration-300">
+      <li class="header-link"><a href="/">About Me</a></li>
+      <li class="header-link"><a href="/experience">Experience</a></li>
+      <li class="header-link"><a href="/projects">Projects</a></li>
     </ul>
   </nav>
 
   <!-- landing page  -->
-  <section class="w-full h-full flex justify-center items-center">
-    <div class="w-1/2 text-gray-600 flex justify-center items-center">
-      <span>Namaste, I'm <h1 class="text-6xl text-gray-500">Sachin Singh</h1></span>
+  <!-- <section class="w-full flex justify-center items-center gap-[30px] px-[150px] cursor-default bg-[linear-gradient(#ededed,#ffffff)]"> -->
+  <section class="w-full flex justify-center items-center gap-[30px] px-[150px] cursor-default">
+    <div class="w-1/2 flex items-center landing-page-image">
+      <img src="./src/assets/images/landing page illustration.png" alt="home page developer illustration"
+        class="z-[10] scale-[0.8] filter grayscale border-[2px] border-gray-950 p-[10px]">
     </div>
-    <div class="w-1/2 relative">
-      <img src="./src/assets/images/home developer illustration.png" alt="home page developer illustration"
-        class="z-[10]">
-      <img src="./src/assets/images/dots.svg" alt="dots" class="absolute top-[-200px] right-[-200px] z-[9] scale-[0.2]">
+    <div class="w-1/2 h-full flex items-center justify-center flex-col gap-[20px] text-center landing-page-text">
+      <h1 class="text-8xl text-gray-500 w-full h-full [text-shadow:_6px_4px_4px_rgb(84_84_84_/_0.3)] landing-heading">
+        Sachin Singh
+      </h1>
+      <p class="landing-content text-gray-400">A Software Engineer with strong knowledge of <span
+          class="hover:text-green-600 transition-colors duration-1000 ease-out">Android SDK</span>, <span
+          class="hover:text-blue-600 transition-colors duration-1000 ease-out">Flutter Engine</span>
+        and worked
+        with 3rd party APIs. Well versed in State Management Architecture and Field Best Practices.
+      </p>
     </div>
-
   </section>
 
+  <!-- work experience -->
+  <section class="relative w-full px-[50px] py-[50px] border-b-2">
+    <h1 class="text-6xl text-center text-gray-500 mt-[50px]" data-aos="fade-up">Work Experience</h1>
+    <div class="w-full h-full flex">
+      <div class="w-1/2 flex-1 flex justify-center items-center flex-col px-[80px] mt-[100px]"></div>
+
+      <div class="w-1/2 flex justify-around gap-[50px] items-start flex-col mt-[100px]">
+
+        <!-- experiences pane  -->
+        <div class="flex gap-[10px]">
+          <!-- line  -->
+          <div class="w-[2px] h-full bg-slate-500 !py-[20px]"></div>
+          <div class="flex gap-[20px] justify-center items-center">
+            <img src="https://picsum.photos/100" alt="organization logo" class="rounded-[8px] filter grayscale" />
+            <div class="text-gray-400">
+              <h3 class="text-[30px] text-gray-500 rounded-full">SDE II Mobile</h3>
+              <div class="flex flex-row">
+                <span>Junglee Games - Full Time</span>
+                <span>Dec 2022 - Present</span>
+                <span>Bengaluru, Karnataka, India</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex gap-[10px]">
+          <!-- line  -->
+          <div class="w-[2px] h-full bg-slate-500 !py-[20px]"></div>
+          <div class="flex gap-[20px] justify-center items-center">
+            <img src="https://picsum.photos/100" alt="organization logo" class="rounded-[8px] filter grayscale" />
+            <div class="text-gray-400">
+              <h3 class="text-[30px] text-gray-500 rounded-full">Flutter Developer</h3>
+              <div class="flex flex-row">
+                <span>Tickled Media (theAsianparent Group) - FullTime</span>
+                <span>Feb 2021 - Nov 2022</span>
+                <span>Mumbai, Maharashtra, India</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex gap-[10px]">
+          <!-- line  -->
+          <div class="w-[2px] h-full bg-slate-500 !py-[20px]"></div>
+          <div class="flex gap-[20px] justify-center items-center">
+            <img src="https://picsum.photos/100" alt="organization logo" class="rounded-[8px] filter grayscale" />
+            <div class="text-gray-400">
+              <h3 class="text-[30px] text-gray-500 rounded-full">Flutter Developer</h3>
+              <div class="flex flex-row">
+                <span>Junglee Games - Full Time</span>
+                <span>Dec 2022 - Present</span>
+                <span>Bengaluru, Karnataka, India</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <img src="./src/assets/images/treecanopy.svg"
+      class="absolute bottom-0 left-0 w-full max-w-7xl sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-3xl h-auto z-[-1]"
+      alt="illustration" />
+  </section>
+
+  <!-- beautiful scroll section  -->
+  <section class="relative beautifulscroll">
+    <img src="./src/assets/images/branchesandbird.svg" alt="skyline"
+      class="w-full h-full scale-[0.5] beautifulscrollingimage" />
+    <h1
+      class="absolute -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 text-[40px] text-[#fff] beautifulscrollingtext opacity-0">
+      "When Creativity Meets Engineering"</h1>
+  </section>
+
+  <section
+    class="next-section h-screen bg-black flex justify-center items-center flex-col projectsection overflow-x-hidden">
+    <h1 class="text-[#fff] text-[150px] text-center projectsheading whitespace-nowrap mt-[100px]"
+      style="font-size: 150px">
+      Highlighted Creations...</h1>
+    <div class="projectshowcaseleft w-full h-full flex justify-center items-center gap-[30px]">
+
+      <!-- one  -->
+      <div class="flex justify-center items-center rounded-lg bg-gray-200">
+        <div
+          class="max-w-sm w-full bg-white/40 rounded-lg shadow-lg overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-2xl hover:bg-white/70 backdrop-blur-md">
+          <div class="p-6">
+            <h2 class="text-2xl font-bold text-gray-800 mb-2">Nature's Beauty</h2>
+            <p class="text-gray-600 text-sm mb-4">
+              Discover the wonders of the natural world with this breathtaking scene. Perfect for nature lovers.
+            </p>
+            <a href="#"
+              class="inline-block px-6 py-2 text-sm font-semibold text-white bg-blue-600 rounded-lg shadow-md hover:bg-blue-700 hover:shadow-lg transition-colors duration-300">
+              Learn More
+            </a>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- two  -->
+      <div class="flex justify-center items-center bg-gray-100 rounded-lg">
+        <div
+          class="max-w-sm w-full bg-gray-200 rounded-lg shadow-lg overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-2xl">
+          <div class="p-6">
+            <h2 class="text-2xl font-bold text-gray-800 mb-2">Nature's Beauty</h2>
+            <p class="text-gray-600 text-sm mb-4">
+              Discover the wonders of the natural world with this breathtaking scene. Perfect for nature lovers.
+            </p>
+            <a href="#"
+              class="inline-block px-6 py-2 text-sm font-semibold text-gray-200 bg-blue-600 rounded-lg shadow-md hover:bg-blue-700 hover:shadow-lg transition-colors duration-300">
+              Learn More
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- three  -->
+      <div class="flex justify-center items-center bg-gray-100 rounded-lg">
+        <div
+          class="max-w-sm w-full bg-gray-200 rounded-lg shadow-lg overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-2xl">
+          <div class="p-6">
+            <h2 class="text-2xl font-bold text-gray-800 mb-2">Nature's Beauty</h2>
+            <p class="text-gray-600 text-sm mb-4">
+              Discover the wonders of the natural world with this breathtaking scene. Perfect for nature lovers.
+            </p>
+            <a href="#"
+              class="inline-block px-6 py-2 text-sm font-semibold text-gray-200 bg-blue-600 rounded-lg shadow-md hover:bg-blue-700 hover:shadow-lg transition-colors duration-300">
+              Learn More
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="projectshowcaseright w-full h-full p-[100px] flex justify-center items-center gap-[30px]">
+      <!-- four -->
+      <div class="flex justify-center items-center bg-gray-100 rounded-lg">
+        <div
+          class="max-w-sm w-full bg-gray-200 rounded-lg shadow-lg overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-2xl">
+          <div class="p-6">
+            <h2 class="text-2xl font-bold text-gray-800 mb-2">Nature's Beauty</h2>
+            <p class="text-gray-600 text-sm mb-4">
+              Discover the wonders of the natural world with this breathtaking scene. Perfect for nature lovers.
+            </p>
+            <a href="#"
+              class="inline-block px-6 py-2 text-sm font-semibold text-gray-200 bg-blue-600 rounded-lg shadow-md hover:bg-blue-700 hover:shadow-lg transition-colors duration-300">
+              Learn More
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- five  -->
+      <div class="flex justify-center items-center bg-gray-100 rounded-lg">
+        <div
+          class="max-w-sm w-full bg-gray-200 rounded-lg shadow-lg overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-2xl">
+          <div class="p-6">
+            <h2 class="text-2xl font-bold text-gray-800 mb-2">Nature's Beauty</h2>
+            <p class="text-gray-600 text-sm mb-4">
+              Discover the wonders of the natural world with this breathtaking scene. Perfect for nature lovers.
+            </p>
+            <a href="#"
+              class="inline-block px-6 py-2 text-sm font-semibold text-gray-200 bg-blue-600 rounded-lg shadow-md hover:bg-blue-700 hover:shadow-lg transition-colors duration-300">
+              Learn More
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- six  -->
+      <div class="flex justify-center items-center bg-gray-100 rounded-lg">
+        <div
+          class="max-w-sm w-full bg-gray-200 rounded-lg shadow-lg overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-2xl">
+          <div class="p-6">
+            <h2 class="text-2xl font-bold text-gray-800 mb-2">Nature's Beauty</h2>
+            <p class="text-gray-600 text-sm mb-4">
+              Discover the wonders of the natural world with this breathtaking scene. Perfect for nature lovers.
+            </p>
+            <a href="#"
+              class="inline-block px-6 py-2 text-sm font-semibold text-gray-200 bg-blue-600 rounded-lg shadow-md hover:bg-blue-700 hover:shadow-lg transition-colors duration-300">
+              Learn More
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+
+  <!-- projects  -->
+  <section class="w-full h-full">
+    <h1 class="text-6xl text-center text-gray-500 mt-[50px]" data-aos="fade-up">Section</h1>
+  </section>
+
+  <img src="./src/assets/images/skyline-1751179.svg" alt="skyline" class="mt-[50px]">
+
+  <footer>
+    <div class="w-full h-[100px] flex justify-center items-center bg-[#000] text-white">
+      <p>&copy; 2021 Sachin Singh. All Rights Reserved.</p>
+    </div>
+  </footer>
+
+  <script type="module" defer src="/src/gsapanimation.js"></script>
   <script type="module" defer src="/src/main.js"></script>
+  <script type="text/javascript" defer>
+    import AOS from 'aos';
+    import 'aos/dist/aos.css';
+    AOS.init();
+  </script>
 </body>
 
 </html>
