add loading animation

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body class="scroll-smooth">
 
   <!-- loading screen  -->
-  <!-- <section class="relative w-full h-screen bg-[#fff] loading-screen-container overflow-y-hidden">
+  <section class="relative w-full h-screen bg-[#fff] loading-screen-container overflow-y-hidden">
     <div class="bg-[#000] w-full h-1/2 upper-loading-section"></div>
     <h1
       class="absolute !z-[10] -translate-x-1/2 -translate-y-[calc(50%+20px)] left-1/2 top-1/2 uppercase tracking-[15px] text-center font-thin text-[#fff] loading-text text-[50px]">
@@ -38,7 +38,7 @@
     <div class="absolute !z-[0] -translate-x-1/2 -translate-y-1/2 left-1/2 top-1/2 w-0 h-[1px] bg-[#fff] loading-line">
     </div>
     <div class="bg-[#000] w-full h-1/2 lower-loading-section"></div>
-  </section> -->
+  </section>
 
   <main class="hidden-content">
     <!-- header - navbar  -->
