footer design started

--- a/index.html
+++ b/index.html
@@ -850,8 +850,11 @@
     </section>
 
     <footer>
-      <div class="w-full h-[100px] flex justify-center items-center bg-[#000] text-white">
-        <p>&copy; 2021 Sachin Singh. All Rights Reserved.</p>
+      <div class="relative w-full h-[600px] flex justify-center items-center flex-col bg-[#000] text-white">
+        <h1 class="text-[30px] tracking-widest">Let’s Connect Beyond the Code</h1>
+        <div>
+
+        </div>
       </div>
     </footer>
 
